// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SanityContent > should render text blocks with marks 1`] = `"<p>Regular text and <strong>bold text</strong><em> and italic text</em></p>"`;

exports[`SanityContent > should render with PortableText 1`] = `""`;

exports[`SanityContent > should render with no props 1`] = `""`;

exports[`SanityContent with PortableText > should allow custom image components to override the default > custom-image-override 1`] = `"<div class="custom-image">Custom Image: image-G3i4emG6B8JnTmGoN0UjgAp8-300x450-jpg</div>"`;

exports[`SanityContent with PortableText > should allow custom image components when default is disabled > custom-image-when-default-disabled 1`] = `"<div class="custom-image">Custom Image: image-G3i4emG6B8JnTmGoN0UjgAp8-300x450-jpg</div>"`;

exports[`SanityContent with PortableText > should automatically handle Sanity images without user configuration > automatic-image-handling 1`] = `"<img data-nuxt-img="" srcset="https://cdn.sanity.io/images/test-project/production/G3i4emG6B8JnTmGoN0UjgAp8-300x450.jpg?invert=false&amp;auto=format 1x, https://cdn.sanity.io/images/test-project/production/G3i4emG6B8JnTmGoN0UjgAp8-300x450.jpg?invert=false&amp;auto=format 2x" src="https://cdn.sanity.io/images/test-project/production/G3i4emG6B8JnTmGoN0UjgAp8-300x450.jpg?invert=false&amp;auto=format">"`;

exports[`SanityContent with PortableText > should disable default image component when disableDefaultImageComponent is true > disabled-default-image-component 1`] = `"<div style="display: none;">[@portabletext/vue] Unknown block type "image", specify a component for it in the \`components.types\` prop</div>"`;

exports[`SanityContent with PortableText > should handle images without caption or attribution > automatic-image-handling-simple 1`] = `"<img data-nuxt-img="" srcset="https://cdn.sanity.io/images/test-project/production/G3i4emG6B8JnTmGoN0UjgAp8-300x450.jpg?invert=false&amp;auto=format 1x, https://cdn.sanity.io/images/test-project/production/G3i4emG6B8JnTmGoN0UjgAp8-300x450.jpg?invert=false&amp;auto=format 2x" src="https://cdn.sanity.io/images/test-project/production/G3i4emG6B8JnTmGoN0UjgAp8-300x450.jpg?invert=false&amp;auto=format">"`;

exports[`SanityContent with PortableText > should handle nested blocks correctly 1`] = `
"<div class="nested-block" _type="nestedBlock" _key="nested1">
  <h3>Nested Block Title</h3>
  <p>Nested block content goes here</p>
  <ul>
    <li>Item 1</li>
    <li>Item 2</li>
    <li>Item 3</li>
  </ul>
</div>"
`;

exports[`SanityContent with PortableText > should pass custom props to components correctly 1`] = `"<div class="custom-component" _type="customBlock" _key="test123">Props: test value, 42</div>"`;

exports[`SanityContent with PortableText > should render custom list components correctly > custom-list-components 1`] = `
"<ul class="mt-xl custom-bullet-list">
  <li>First bullet item</li>
  <li>Second bullet item</li>
</ul>
<ol class="mt-lg custom-number-list">
  <li>First numbered item</li>
  <li>Second numbered item</li>
</ol>
<ol class="m-auto text-lg custom-checkmarks-list">
  <li>First checkmark item</li>
  <li>Second checkmark item</li>
</ol>"
`;

exports[`SanityContent with PortableText > should render custom listItem components correctly > custom-list-item-components 1`] = `
"<ul>
  <li style="list-style-type: disclosure-closed;" class="custom-bullet-item">First bullet item</li>
  <li style="list-style-type: disclosure-closed;" class="custom-bullet-item">Second bullet item</li>
</ul>
<ul>
  <li class="custom-checkmark-item"><span class="checkmark">✅</span>First checkmark item</li>
  <li class="custom-checkmark-item"><span class="checkmark">✅</span>Second checkmark item</li>
</ul>"
`;

exports[`SanityContent with PortableText > should render deeply nested lists with proper structure > deeply-nested-list-structure 1`] = `
"<ol>
  <li>1. Top level<ol>
      <li>a. Second level<ol>
          <li>i. Third level</li>
        </ol>
      </li>
      <li>b. Second level</li>
    </ol>
  </li>
  <li>2. Top level<ol>
      <li>a. Second level</li>
    </ol>
  </li>
</ol>"
`;

exports[`SanityContent with PortableText > should render link marks with href correctly 1`] = `"<p>Visit <a href="https://example.com">our website</a> for more info.</p>"`;

exports[`SanityContent with PortableText > should render mixed content blocks consistently > portable-text-rendering 1`] = `
"<div class="custom-content" _type="customBlock" _key="custom1">Custom block content</div>
<h2><strong>Styled heading with marks</strong></h2>
<ul>
  <li>List item 1</li>
  <li><em>List item 2 with emphasis</em></li>
</ul>"
`;

exports[`SanityContent with PortableText > should render nested lists with proper HTML structure > nested-list-structure 1`] = `
"<h3>3. Providing your personal data to others</h3>
<ol>
  <li>test</li>
  <li>thing<ul>
      <li>nested</li>
      <li>list</li>
    </ul>
  </li>
</ol>"
`;

exports[`SanityContent with PortableText > should use a single list component for all list types when provided > generic-list-component 1`] = `
"<ul class="mt-xl">
  <li>First bullet item</li>
  <li>Second bullet item</li>
</ul>
<ol class="mt-lg">
  <li>First numbered item</li>
  <li>Second numbered item</li>
</ol>
<ol class="m-auto text-lg">
  <li>First checkmark item</li>
  <li>Second checkmark item</li>
</ol>"
`;

exports[`SanityContent with PortableText > should use a single listItem component for all list item types when provided > generic-list-item-component 1`] = `
"<ul>
  <li style="list-style-type: disclosure-closed;">First bullet item</li>
  <li style="list-style-type: disclosure-closed;">Second bullet item</li>
</ul>
<ul>
  <li>✅First checkmark item</li>
  <li>✅Second checkmark item</li>
</ul>"
`;
